--- a/_toc.yml
+++ b/_toc.yml
@@ -2,8 +2,8 @@ format: jb-book
 root: index
 
 chapters:
-  - file: lecture_16_example.ipynb
+  - file: lecture_16_example
 
-  - file: project1.ipynb
+  - file: project1
 
   #add new pages here
