--- a/_config.yml
+++ b/_config.yml
@@ -21,3 +21,4 @@ sphinx:
     html_js_files:
       - https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.7/require.min.js
     suppress_warnings: ["mystnb.unknown_mime_type"]
+html_baseurl: "https://hm3076-gulay.github.io"
